--- a/index.html
+++ b/index.html
@@ -1,4 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-    
+    <head>
+        <meta charset="utf-8">
+        <title>Odin Recipes</title> <!--This html will display links to recipes-->
+    </head>
+    <body>
+        <h1>Here are some great links for the best recipes!</h1>
+        <!--this is a recipe to amazing cookies and the cookies-->
+        <img src="images/cookies.jpeg"
+        alt="Chocolate chip cookies">
+        <a href="https://www.bettycrocker.com/recipes/ultimate-chocolate-chip-cookies/77c14e03-d8b0-4844-846d-f19304f61c57">For the best cookie recipe click here!</a>
+        <p>         </p>
+        <img src="images/chicken_alfredo.jpeg"
+        alt="Creamiest Chicken Alfred!">
+        <a href="https://www.delish.com/cooking/recipe-ideas/recipes/a53695/one-pot-chicken-alfredo-recipe/">You have to try this amazing chicken alredo!</a>
+    </body>
 </html>
