added div to give spacing to the images and links

--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
         <!--this is a recipe to amazing cookies and the cookies-->
         <img src="images/cookies.jpeg"
         alt="Chocolate chip cookies">
+        <div>
         <a href="https://www.bettycrocker.com/recipes/ultimate-chocolate-chip-cookies/77c14e03-d8b0-4844-846d-f19304f61c57">For the best cookie recipe click here!</a>
-        <p>         </p>
+        </div>
         <img src="images/chicken_alfredo.jpeg"
         alt="Creamiest Chicken Alfred!">
+        <div>
         <a href="https://www.delish.com/cooking/recipe-ideas/recipes/a53695/one-pot-chicken-alfredo-recipe/">You have to try this amazing chicken alredo!</a>
+        </div>
     </body>
 </html>
