--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
     <body>
         <h1>Here are some great links for the best recipes!</h1>
         <!--this is a recipe to amazing cookies and the cookies-->
+        <h4>Best Chocolate Chip Cookies</h4>
         <img src="images/cookies.jpeg"
         alt="Chocolate chip cookies">
         <div>
         <a href="https://www.bettycrocker.com/recipes/ultimate-chocolate-chip-cookies/77c14e03-d8b0-4844-846d-f19304f61c57">For the best cookie recipe click here!</a>
-        </div>
+        </div> <!--this gives space like and enter-->
+        <h4>Creamiest Chicken Alfredo</h4>
         <img src="images/chicken_alfredo.jpeg"
         alt="Creamiest Chicken Alfred!">
-        <div>
+        <div> <!--another spacing-->
         <a href="https://www.delish.com/cooking/recipe-ideas/recipes/a53695/one-pot-chicken-alfredo-recipe/">You have to try this amazing chicken alredo!</a>
         </div>
     </body>
