Added a CSS file for style and updated HTML file to show newly added style

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Odin Recipes</title> <!--This html will display links to recipes-->
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>Here are some great links for the best recipes!</h1>
